# Backend

./: .env.example  Makefile  README.md  alembic.ini  app.py  docker-compose.yml  openapi.json  pyproject.toml
alembic/: env.py
alembic/test_data/: achievements.csv  announcements.csv  course_enrollments.csv  courses.csv  lectures.csv  quiz_answers.csv  quiz_questions.csv  quiz_submissions.csv  quizzes.csv  reactions.csv  session_participants.csv  session_quizzes.csv  sessions.csv  users.csv
alembic/versions/: 001_initial_migration.py  002_fill_db.py
vkr_itmo/: __main__.py  auth.py  config.py
vkr_itmo/db/: models.py  session.py
vkr_itmo/endpoints/: __init__.py  auth.py  courses.py  lectures.py  quizzes.py  reactions.py  sessions.py  students.py  users.py  websocket.py
vkr_itmo/schemas/: courses.py  lectures.py  quizzes.py  reactions.py  sessions.py  users.py
